--- a/themes/default/exam/create.html
+++ b/themes/default/exam/create.html
@@ -275,7 +275,7 @@
                                     <th class="text-center" scope="row">{{ exam_type.id }}</th>
                                     <td>{{ exam_type.name }}</td>
                                     <td class="text-center">
-                                        <button type="button" class="btn btn-sm btn-warning">edit</button> 
+                                        <button type="button" onclick="exam.type.invokeEditModal('{{ exam_type.id }}', '{{ exam_type.name }}')" class="btn btn-sm btn-warning">edit</button> 
                                         <button type="button" onclick="exam.type.remove('{{ exam_type.id }}')" class="btn btn-sm btn-danger"><i class="la la-trash"></i></button> 
                                     </td>
                                 </tr>
@@ -341,6 +341,36 @@
     </div>
     <!-- END : MODAL EDIT/REMOVE EXAM -->
 
+    <!-- START : MODAL EDIT EXAM-TYPE -->
+    <div class="modal fade" id="edit-exam-type" tabindex="-1" role="dialog" aria-labelledby="create-exam-type-title"
+        aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+    
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit exam type</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <form>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="exam_type">Exam Type Name</label>
+                            <input type="text" class="form-control" id="modal-edit-exam-type-name" />
+                        </div>
+                        <input type="hidden" id="modal-edit-exam-type-id" value="" />
+                    </div>
+    
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-primary" onclick="exam.type.edit()"> Save changes </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <!-- END : MODAL EDIT EXAM-TYPE -->
+
     <script>
 
         // START : SCRIPT FOR REMOVE EXAM
@@ -376,6 +406,48 @@
                             console.log( e.responseText )
                         }
                     })
+                },
+
+                // HANDLE EDIT ( Exam Type )
+                edit: () => {
+
+                    // PAYLOAD
+                    let formData = new FormData
+                    formData.append('id', $("#modal-edit-exam-type-id").val())
+                    formData.append('name', $("#modal-edit-exam-type-name").val())
+
+                    // AJAX
+                    $.ajax({
+                        url: "{{ app.url }}/exam/ajax_edit_exam_type",
+                        method: 'POST',
+                        data: formData,
+                        processData: false,
+                        contentType: false,
+                        dataType: 'json',
+                        success: Response => {
+                            if ( Response.status === 'success' ) {
+                                alertify.alert("Success", "Exam type edited Successfully").set({
+                                    'closable': false,
+                                    'onok': () => {
+                                        location.reload()
+                                    }
+                                })
+                            } else {
+                                alertify.error(Response.message)
+                            }
+                        },
+                        error: e => {
+                            console.log( e.responseText )
+                        }
+                    })
+
+                },
+
+                // INVOKE EDIT MODAL
+                invokeEditModal: (id, name) => {
+                    $("#modal-edit-exam-type-id").val(id)
+                    $("#modal-edit-exam-type-name").val(name)
+                    $("#edit-exam-type").modal("show")
                 }
             },
 
